adjust waiting for jobs logic